# lib_parallel_testing

./: .gitignore  CMakeLists.txt  README.md
include/ParallelTesting/: ConfidenceInterval.h  PerformanceEvaluation.h  TestFunctions.h  TestOptions.h  utils.h
include/TestingData/: Data.h  DataArray.h  DataAudio.h  DataImage.h  DataMatrix.h  DataText.h  DataVideo.h
